--- a/week6/MediaQueries.html
+++ b/week6/MediaQueries.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Mobile First Responsive Navigation</title>
     <meta name="description" content="CSS only mobile first navigation">
-    <meta name="author" content="Brando Gutierrez">
+    <meta name="author" content="Joseline Ortiz">
  
     <!--Mobile specific meta goodness :)-->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
